--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </nav>
     </header>
     <section id="main" class="sections">
-        <span class="sideText">Portfolio 2022 ©</span>
+        <span class="sideText ml12">Portfolio 2022 ©</span>
         <div id="profile-img"></div>
-        <span class="sideText">Portfolio 2022 ©</span>
+        <span class="sideText ml13">Portfolio 2022 ©</span>
         <span id="nameText">Tanush Sethi</span>
     </section>
     <section id="about" class="sections reveal">
@@ -154,6 +154,8 @@
         <div></div>
     </section>
     <a href="#" class="top">↑</a>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
