--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
             <span id="socials-text-des">tanushsethi55@gmail.com</span>
         </div>
         <div id="social-icons-container">
-            <div class="social-icons"><div id="social-icon1"><img src="images/new-Instagram-logo-white-glyph.png"></div></div>
-            <div class="social-icons"><div id="social-icon2"><img src="images/PngItem_1657029.png"></div></div>
-            <div class="social-icons"><div id="social-icon3"><img src="images/PngItem_326310.png"></div></div>
-            <div class="social-icons"><div id="social-icon4"><img src="images/github-pages-logo-repository-fork-github-86eddab19cbc3ae293ada0fe0fb9e27d.png"></div></div>
+            <div class="social-icons"><a href="https://www.instagram.com/tanushsethi_/"><div id="social-icon1"><img src="images/new-Instagram-logo-white-glyph.png"></div></a></div>
+            <div class="social-icons"><a href="https://twitter.com/sethitanush"><div id="social-icon2"><img src="images/PngItem_1657029.png"></div></a></div>
+            <div class="social-icons"><a href="https://www.linkedin.com/in/tanushsethi/"><div id="social-icon3"><img src="images/PngItem_326310.png"></div></a></div>
+            <div class="social-icons"><a href="https://github.com/tanushsethi"><div id="social-icon4"><img src="images/github-pages-logo-repository-fork-github-86eddab19cbc3ae293ada0fe0fb9e27d.png"></div></a></div>
         </div>
         <div></div>
     </section>
